# spi-flash-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: test.yml
src/: erase_plan.rs  id.rs  lib.rs  sfdp.rs  sreg.rs
